fix broken in firefox

--- a/src/pages/homepage.less
+++ b/src/pages/homepage.less
@@ -1,4 +1,4 @@
-@import (reference) "../css/mixins.less";
+@import (reference) '../css/mixins.less';
 
 .homepage {
   .section2 {
@@ -86,6 +86,7 @@
         box-shadow: 0px 20px 40px rgba(22, 36, 111, 0.2);
         border-radius: 12px;
         height: 394px;
+        overflow-x: auto;
         pre code.hljs {
           display: block;
           overflow-x: auto;
@@ -100,7 +101,7 @@
         .hljs-keyword,
         .hljs-operator,
         .hljs-pattern-match {
-          color: #27A343;
+          color: #27a343;
         }
         .hljs-function,
         .hljs-pattern-match .hljs-constructor {
@@ -145,12 +146,12 @@
         .hljs-meta .hljs-string,
         .hljs-regexp,
         .hljs-string {
-          color: #86DF5D;
+          color: #86df5d;
         }
         .hljs-built_in,
         .hljs-class .hljs-title,
         .hljs-title.class_ {
-          color: #3BD6FF;
+          color: #3bd6ff;
         }
         .hljs-attr,
         .hljs-number,
@@ -160,7 +161,7 @@
         .hljs-template-variable,
         .hljs-type,
         .hljs-variable {
-          color: #FF9FC9;
+          color: #ff9fc9;
         }
         .hljs-bullet,
         .hljs-link,
@@ -187,7 +188,7 @@
         }
         .shooting-title {
           padding: 20px 0;
-          border-top: 1px solid #EFF9FE;
+          border-top: 1px solid #eff9fe;
           font-size: 32px;
           line-height: 42px;
           color: #c5ccd6;
@@ -302,7 +303,7 @@
       font-weight: bold;
       font-size: 16px;
       line-height: 24px;
-      border-top: 1px solid #EFF9FE;
+      border-top: 1px solid #eff9fe;
       color: var(--color-grey-03);
 
       width: 400px;
@@ -424,5 +425,5 @@
 .home-code-block {
   width: fit-content;
   color: #fff;
-  font-family: "Source Code Pro";
+  font-family: 'Source Code Pro';
 }
